demo/demo-cpu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpu-bound-fastapi-ingress
  namespace: workload-cpu
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: cpu-bound-fastapi.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpu-bound-fastapi-stable
                port:
                  number: 80
